# meta-skills

./: .gitignore  ONBOARDING.md  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-05-15-meta-ralph-ab-harness.md  2026-05-17-svelte-ai-infra-plugin.md  2026-05-17-svelte-ai-infra-skill-refactor.md
docs/superpowers/specs/: 2026-05-15-meta-ralph-ab-spike-findings.md  2026-05-15-meta-ralph-ab-test-design.md  2026-05-17-svelte-ai-infra-plugin-design.md  2026-05-17-svelte-ai-infra-skill-refactor-design.md
plugins/frontend-dev/react-ai-infra/.claude-plugin/: plugin.json
plugins/frontend-dev/react-ai-infra/skills/react-ai-infra/: SKILL.md
plugins/frontend-dev/svelte-ai-infra/.claude-plugin/: plugin.json
plugins/frontend-dev/svelte-ai-infra/skills/svelte-ai-infra/: .upstream-ref  SKILL.md
plugins/meta-bootstrap-docs/.claude-plugin/: plugin.json
plugins/meta-bootstrap-docs/skills/meta-bootstrap-docs/: SKILL.md
plugins/meta-ralph-b/.claude-plugin/: plugin.json
plugins/meta-ralph-b/docs/: meta-ralph-spec.md
plugins/meta-ralph-b/skills/meta-ralph/: SKILL.md
plugins/meta-ralph-b/skills/meta-ralph/reference/: prompt.md
plugins/meta-ralph/.claude-plugin/: plugin.json
plugins/meta-ralph/docs/: meta-ralph-spec.md  meta-ralph.md
plugins/meta-ralph/skills/meta-ralph/: SKILL.md
plugins/meta-react/.claude-plugin/: plugin.json
plugins/meta-react/skills/meta-react/: SKILL.md
plugins/security-supply-chain/.claude-plugin/: plugin.json
plugins/security-supply-chain/skills/security-supply-chain/: SKILL.md
plugins/security-supply-chain/skills/security-supply-chain/examples/uv/: pyproject.toml
skills/meta-bootstrap-docs/example/: AGENTS.md
skills/meta-ralph/reference/: prompt.md
skills/meta-ralph/templates/: prd.json.example  prd.schema.json
skills/meta-ralph/templates/ralph/: ralph.js.tpl  ralph.py.tpl  ralph.sh.tpl
skills/meta-react/references/: install-workflow.md
skills/meta-react/rules/: react-components.md
(+85 files in other folders)
